@@ -18,8 +18,11 @@ Feature: Page level actions
   Scenario: Waiting for something
     Then I should be able to wait for a block to return true
     
-  Scenario: Handling Alerts
+  Scenario: Handling alert popups
     When I handle the alert 
     Then I should be able to get the alert's message
-  
+    
+  Scenario: Handling confirm popups
+    When I handle the confirm
+    Then I should be able to get the confirm message
   
