@@ -8,7 +8,8 @@
       * #when_not_visible
       * #wait_until
   * Handling popups
-    * Added #alert to page object to override default alert behavior
+    * Added #alert to page object to override default alert popup behavior
+    * Added #confirm to page object to override default confirm popup behavior
   * Updated to use selenium-webdriver 2.1.0
 
 === Version 0.1.1 / 2011-07-16
